# Szajka_2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: TSP.hpp
src/: tsp.cpp
